ode4j CHANGELOG
---------------

the rules for this file:
  * entries are sorted newest-first.
  * summarise sets of changes.
  * don't ever delete anything.
  * keep the format consistent (79 char width, YYYY-MM-DD date format).

------------------------------------------------------------------------------


2009-Aug-18 Tilmann Zäschke
		* Javadoc improvements

2009-Aug-12 Tilmann Zäschke
		* Javadoc & API for DBody completed
		* Javadoc & API for DSpace and sub-classes completed
		* Javadoc & API for DGeom and sub-classes completed
		* Fixed and reduced dependencies to .cpp and .internal
		* Fixed Bug#2836288 in DxConvex
		* Javadoc & API for DJoint and sub-classes completed
		* cleaned up javadoc a bit

2009-Aug-10 Tilmann Zäschke
		* Reduced warnings
		* Added @Override labels
		* Javadoc & API for DWorld completed

2009-Jul-22 Tilmann Zäschke
		* Copied javadoc for CppMath API.
		* More API changes in the MATH area.
		  Array, Vector, Martrix and 'v' are not public anymore.

2009-Jul-21 Tilmann Zäschke
		* API changes !!!!!!!!!!!!!!!
		  - DVector3 does not extend DVector anymore
		  - DMatrix3C.get(i) removed
		  - Removed following method:
		  	Matrix.dMultiply0 (DVector3 A, final DMatrix3C B, 
			final DVector3C C, int p, int q, int r)
			-> last arguments removed, assumed to be always 3,3,1.
		  - Matrix.dMultiply0 (DMatrix3 A, final DMatrix3C B, 
			final DMatrix3C C, int p, int q, int r)
		  


2009-Jul-20 Tilmann Zäschke
		* Minor updates
		* released 0.11.1-j1.0 ***********************************************


2009-Jul-07 Tilmann Zäschke
		* Fixed Test harness errors and failures
		* Fixed DemoBuggy

2009-Jul-06 Tilmann Zäschke
		* Replaced usage of DVector6 with DAABB / improved DAABB
		* Reduced usage of RefDouble in API
		* Implemented most of the functions in the fake-C/C++ API.

2009-Jul-06 Tilmann Zäschke
		* All code migrated to ode-0.11.1
		* released 0.11.1-j1.0-beta-1

2009-Jun-26 Tilmann Zäschke
		* Started migration to ode-0.11.1